# hibernian

./: .gitignore  AGENTS.md  Beste 10 Selgere.sql.json.htm  FOLDER_STRUCTURE.md  README.md  Salg i dag Visma.sql.json.htm  TARGET_ARCHITECTURE.md  aar.htm  aar_publish.htm  bamble.json  bamble.sql  bamble_alt.json  bamble_alt.py  bamble_alt.sql  bamble_salgsdetaljer.csv  bamble_salgsdetaljer.sql  combinedfiles.json  dashboard_nav_sales.py  denneuke.htm  denneuke_publish.htm  forrigeuke.htm  forrigeuke_publish.htm  get_sql.bat  git_publish.xml  git_push.bat  idag.htm  idag_publish.htm  iforgar.htm  iforgar_publish.htm  igar.htm  igar_publish.htm  index.htm  json_sql_script.py  lagret_publish.htm  lor_best.htm  lor_best_publish.htm  maned.htm  maned_publish.htm  merge.ps1  nav_produkter.csv  (+16 more)
pipeline/: README.md  pyproject.toml
pipeline/config/: .gitignore  pipeline.example.json
pipeline/scheduler/: hibernian-beta-refresh-15m.xml
pipeline/scripts/: audit_publish_data.py  publish_r2_only.ps1  repair_historical_day_from_commit.py  run_local_incremental_refresh.py  run_refresh_r2.ps1
pipeline/sql/sales/: nav_product_day_window.sql  nav_seller_day_window.sql  nav_store_day_window.sql
pipeline/src/hibernian_pipeline/: __init__.py  cli.py  settings.py
pipeline/src/hibernian_pipeline/bootstrap/: __init__.py  product_history.py  visma_history.py
pipeline/src/hibernian_pipeline/shared/: io.py  (+6 more)
pipeline/tests/: test_build_store_day.py  test_legacy_format.py  test_product_pipeline.py  test_publish_r2.py  test_sales_pipeline_flow.py  test_settings.py  test_stock_and_meta.py
(+200 files in other folders)
