[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hibernian-pipeline"
version = "0.1.0"
description = "Local data pipeline scaffold for the Hibernian beta app."
requires-python = ">=3.11"
dependencies = ["pyodbc>=5.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
